{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 777,
  "lineage": "3c6b106e-7306-1bc8-bef5-1b3a9341372d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.133.22.67",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-27T13:03:30.827-07:00",
            "id": "projects/csye-417822/regions/us-central1/addresses/csye-static-ip",
            "name": "csye-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "csye-417822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/regions/us-central1/addresses/csye-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/csye-417822/zones/us-central1-a/instances/csye-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web_ssh_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T13:03:30.789-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye-417822/global/firewalls/allow-web-ssh-traffic",
            "log_config": [],
            "name": "allow-web-ssh-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/networks/my-vpc",
            "priority": 1000,
            "project": "csye-417822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/firewalls/allow-web-ssh-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/csye-417822/global/forwardingRules/global-forwarding-rule",
            "ip_address": "34.120.124.247",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-forwarding-rule",
            "port_range": "443",
            "project": "csye-417822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/forwardingRules/global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/targetHttpsProxies/https-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.static_bucket",
            "google_compute_managed_ssl_certificate.ssl_certificate",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.url_map",
            "google_storage_bucket.static_website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "csye_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/images/packer-1711289121",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/csye-417822/zones/us-central1-a/disks/csye-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/csye-417822/zones/us-central1-a/instances/csye-instance",
            "instance_id": "6001721757032629617",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "db_name": "csye-database",
              "db_password": "gCI4\u003ek@$2N9Ruppw",
              "db_user": "csye-user"
            },
            "metadata_fingerprint": "If84br2W85s=",
            "metadata_startup_script": "  \r\n#!/bin/bash\r\nyum update -y\r\nyum install -y httpd mod_ssl\r\nsystemctl start httpd\r\nsystemctl enable httpd\r\necho '\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eWelcome to My Custom Web App!\u003c/h1\u003e\u003cp\u003eThis is a custom CentOS Stream 8 instance created with Packer.\u003c/p\u003e\u003c/body\u003e\u003c/html\u003e' \u003e /var/www/html/index.html\r\nfirewall-cmd --zone=public --add-port=80/tcp --permanent\r\nfirewall-cmd --zone=pub [...]
            "name": "csye-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.22.67",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/networks/my-vpc",
                "network_ip": "10.0.1.17",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/csye-417822/regions/us-central1/subnetworks/webapp-subnet",
                "subnetwork_project": "csye-417822"
              }
            ],
            "project": "csye-417822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/zones/us-central1-a/instances/csye-instance",
            "service_account": [
              {
                "email": "vm-service-account@csye-417822.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "csye-group",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "3rk5s9pElYQ=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "db_password",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.webapp_subnet",
            "google_service_account.vm_service_account",
            "google_sql_database.database",
            "google_sql_database_instance.instance",
            "google_sql_user.user",
            "random_password.db_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/csye-417822/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "project": "csye-417822",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "webapp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-24T22:06:50.309-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/csye-417822/regions/us-central1/subnetworks/webapp-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "webapp-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye-417822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/regions/us-central1/subnetworks/webapp-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T13:03:56.027-07:00",
            "id": "projects/csye-417822/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "csye-417822",
            "proxy_bind": false,
            "proxy_id": 1364182041233048900,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/csye-417822/global/sslCertificates/sarkarilinks-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.static_bucket",
            "google_compute_managed_ssl_certificate.ssl_certificate",
            "google_compute_url_map.url_map",
            "google_storage_bucket.static_website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T13:03:44.045-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/backendBuckets/static-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "6u2X3lZn1Mo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/csye-417822/global/urlMaps/url-map",
            "map_id": 7948944604872164687,
            "name": "url-map",
            "path_matcher": [],
            "project": "csye-417822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye-417822/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.static_bucket",
            "google_storage_bucket.static_website"
          ]
        }
      ]
    }
  ]
}